Add cache simulator assignment

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Tomasulo"]
 	path = Tomasulo
 	url = https://github.com/aklsh/DynamicExecCore
+[submodule "SimCache"]
+	path = SimCache
+	url = https://github.com/aklsh/SimCache
